--- a/bin/install
+++ b/bin/install
@@ -68,7 +68,7 @@ for component in options.enable.split(','):
 
     # add experiment yaml
     if options.experiment:
-        exp_yaml = os.path.join(helm_dir, component, "values", options.experiment,
+        exp_yaml = os.path.join(helm_dir, component, "values",
                                 "values-{}.yaml".format(options.experiment))
         if os.path.exists(exp_yaml):
             com += ['-f', exp_yaml]
@@ -81,5 +81,5 @@ for component in options.enable.split(','):
             com += ['--set', "{}.enabled=false".format(sub_name)]
 
     # execute
-    print('>>> ', ' '.join(com),'\n\n')
+    print('>>> '+' '.join(com)+'\n\n')
     Popen(com).wait()
