--- a/bin/install
+++ b/bin/install
@@ -69,7 +69,6 @@ for component in options.enable.split(','):
     else:
         com = ['helm', 'install', inst_name, os.path.join(helm_dir, component)]
     com += ['-f', os.path.join(helm_dir, component, "values.yaml")]
-    com += ['--set', 'global.deploymentName={}'.format(inst_name)]
 
     # add experiment yaml
     if options.experiment:
@@ -77,6 +76,10 @@ for component in options.enable.split(','):
                                 "values-{}.yaml".format(options.experiment))
         if os.path.exists(exp_yaml):
             com += ['-f', exp_yaml]
+
+    # give deployment name
+    if options.affix:
+        com += ['--set', 'global.deploymentName={}'.format(inst_name)]
 
     # disable sub components
     if component in disabled:
